Fixes and upgrades
Implementing storeService, structure fix, improved runtime, minor bug fixes

--- a/FlightBoardAPI/FlightBoardAPI/appsettings.json
+++ b/FlightBoardAPI/FlightBoardAPI/appsettings.json
@@ -6,7 +6,11 @@
     }
   },
   "AllowedHosts": "*",
-  "JsonFile": {
-    "FilePath": "../../Raw_data OW.json"
+  "JsonSettings": {
+    "FilePaths":[
+      { "FilePath": "../../Raw_data OW.json" },
+      { "FilePath": "../../Raw_data OW - 2pax.json" },
+      { "FilePath": "../../Raw_data RT - 2pax.json" }
+    ]
   }
 }
