--- a/FlightBoardAPI/FlightBoardAPI/appsettings.json
+++ b/FlightBoardAPI/FlightBoardAPI/appsettings.json
@@ -8,9 +8,9 @@
   "AllowedHosts": "*",
   "JsonSettings": {
     "FilePaths":[
-      { "FilePath": "../../Raw_data OW.json" },
-      { "FilePath": "../../Raw_data OW - 2pax.json" },
-      { "FilePath": "../../Raw_data RT - 2pax.json" }
+      { "FilePath": "../data_files/Raw_data OW.json" },
+      { "FilePath": "../data_files/Raw_data OW - 2pax.json" },
+      { "FilePath": "../data_files/Raw_data RT - 2pax.json" }
     ]
   }
 }
